bk_ida/gccida/g1/print_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_reg/src/i386.c:6106:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5640, "print_reg"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_reg/src/i386.c:6239:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5715, "print_reg"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_reg/src/i386.c:6257:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5665, "print_reg"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_reg/src/i386.c:6273:16: error: use of undeclared identifier 'off_6663DA'
fprintf( file, off_6663DA, ( unsigned int)( v9 - 29)); 
               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_reg/src/obj/i386.o] Error 1
